--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -62,7 +62,7 @@
 
 
 
-<section class="row">
+<section class="row mb-5">
     <div class="col-md-12">
     <div class="card p-0">
             <div class="card-header p-2 bg-success text-light">
