--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -1,5 +1,5 @@
 
-<section class="row mb-5">
+<section class="row mb-3 mb-lg-5">
     <div class="col-md-12">
     <div class="card p-0">
             <div class="card-header p-2 bg-success text-light">
